# netbox-blade-chassis

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yaml  test.yml
netbox_blade_chassis/: __init__.py  forms.py  layout.py  models.py  template_content.py  views.py
netbox_blade_chassis/api/: urls.py  views.py
netbox_blade_chassis/migrations/: 0001_initial.py
netbox_blade_chassis/svg/: racks.py
netbox_blade_chassis/templates/netbox_blade_chassis/: devicetype_blade_layout.html
netbox_blade_chassis/templates/netbox_blade_chassis/inc/: elevation_patch.html
netbox_blade_chassis/tests/: test_forms.py  test_layout.py
scripts/: seed_blade_lab.py  version-check.py
testing/: configuration_testing.py
